tests/Core/negative/parsing/test019.jvc
type Unit {
  unit : Unit;
};

def unit' := unit;

case unit of {
  unit' := 0;
}
